fixed name spacing in modal and icon

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -60,7 +60,7 @@
     font-family: $primary-font;
     font-weight: 500;
     font-size: 18px;
-    line-height: 13px;
+    line-height: 20px;
     letter-spacing: 2px;
     color: white;
     font-weight: bold;
